<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical"
        android:id="@+id/dataLayout">

        <TextView
            android:id="@+id/name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/marker_name"
            android:textSize="16sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/licensePlate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marker_license_plate"
            android:textSize="16sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"

            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/batteryLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marker_battery_level"
            android:textSize="16sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"

            app:layout_constraintTop_toBottomOf="@id/licensePlate"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/helmets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marker_helmets"
            android:textSize="16sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"

            app:layout_constraintTop_toBottomOf="@id/batteryLevel"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marker_model"
            android:textSize="16sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"

            app:layout_constraintTop_toBottomOf="@id/helmets"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/bikes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marker_bikes_available"
            android:textSize="16sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"

            app:layout_constraintTop_toBottomOf="@id/model"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/arrival"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marker_scheduled_arrival"
            android:textSize="16sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"

            app:layout_constraintTop_toBottomOf="@id/bikes"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>